Add main layout to html add text add main img

--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Piškvorky</h1>
+    <main class="main">
+      <div class="main__img">
+        <img src="uvodni.jpg" alt="piškvorky" />
+      </div>
+      <div class="main__descr">
+        <h1 class="main__title">Piškvorky</h1>
+        <p class="main__text">
+          Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle
+          se hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši
+          skvělou aplikaci, takže už nepotřebujete ani tužku a nemusíte hledat
+          čtverečkovaný papír. Přejeme vám hodně zábavy!
+        </p>
+      </div>
+      <div class="main__btns">
+        <a
+          href="https://czechitas-podklady.cz/Piskvorky-pravidla/"
+          class="main__rules"
+          >Pravidla</a
+        >
+        <a href="index.html" class="main__start">Začít hrát</a>
+      </div>
+    </main>
   </body>
 </html>
