Add buttons to html and css

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         </p>
       </div>
       <div class="main__btns">
-        <a
-          href="https://czechitas-podklady.cz/Piskvorky-pravidla/"
-          class="main__rules"
-          >Pravidla</a
-        >
-        <a href="index.html" class="main__start">Začít hrát</a>
+        <a href="https://czechitas-podklady.cz/Piskvorky-pravidla/">
+          <button class="main__rules">Pravidla</button>
+        </a>
+        <a href="index.html">
+          <button class="main__start">Začít hrát</button>
+        </a>
       </div>
     </main>
   </body>
