start ex.2 add svg images add hra.html and add link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="https://czechitas-podklady.cz/Piskvorky-pravidla/">
           <button class="main__rules">Pravidla</button>
         </a>
-        <a href="index.html">
+        <a href="hra.html">
           <button class="main__start">Začít hrát</button>
         </a>
       </div>
