--- a/hra.html
+++ b/hra.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main class="main game">
+    <main class="game">
       <h1 class="main__title">Piškvorky</h1>
       <nav class="game__menu">
         <div class="game__menu--player">
@@ -31,6 +31,108 @@
           </a>
         </div>
       </nav>
+      <div class="game__area">
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+        <button class="game__box"></button>
+      </div>
     </main>
   </body>
 </html>
