add event click for game boxes

--- a/hra.html
+++ b/hra.html
@@ -134,5 +134,6 @@
         <button class="game__box"></button>
       </div>
     </main>
+    <script type="module" src="hra.js"></script>
   </body>
 </html>
