realize game area (buttons) with js

--- a/hra.html
+++ b/hra.html
@@ -31,108 +31,7 @@
           </a>
         </div>
       </nav>
-      <div class="game__area">
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-        <button class="game__box"></button>
-      </div>
+      <div class="game__area"></div>
     </main>
     <script type="module" src="hra.js"></script>
   </body>
